tests/invalid/with_null.rs
use cstr_literal::cstr;

fn main() {
  cstr!("foo\0bar");
}
